# lpqp

./: CMakeLists.txt  README  TODO  fetch_external.sh
matlab/: CMakeLists.txt  assignmentToMarginal.m  computeEntropy.m  computeKLDivergence.m  computeQPValue.m  demo_graphdecomposition.m  demo_lpqp.m  demo_lpqp_cellvsmat.m  demo_smoothdualdecomposition.m  demo_tree.m  generateGridGraph.m  getAssignment.m  matlab_helpers.cpp  matlab_helpers.h  matlab_out.h  mex_graphdecomposition.cpp  mex_lpqp.cpp  mex_smoothdualdecomposition.cpp  mex_treeinference.cpp  mex_trws.cpp  outputHistoryToFile.m  roundSolution.m  visualizeHistory.m
src/: CMakeLists.txt  GraphDecomposition.cpp  GraphDecomposition.h  LPQP.cpp  LPQP.h  LPQPNPBP.cpp  LPQPNPBP.h  LPQPSDD.cpp  LPQPSDD.h  SmoothDualDecomposition.cpp  SmoothDualDecomposition.h  SmoothDualDecompositionFistaDescent.cpp  SmoothDualDecompositionFistaDescent.h  SmoothDualDecompositionLBFGS.cpp  SmoothDualDecompositionLBFGS.h  TRWS.cpp  TRWS.h  TreeInference.cpp  TreeInference.h
test/: CMakeLists.txt  GraphDecomposition_test.cpp  LPQPNPBP_test.cpp  LPQPSDD_decomposition_test.cpp  LPQPSDD_test.cpp  SmoothDualDecomposition_test.cpp  TreeInference_test.cpp
